# juniper-mpls-l3vpn-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py  update_management_ip.sh
.github/: automation_overview.py  automation_workflow.py  dependabot.yml  index.md.j2  index.py  pages.md.j2  requirements.txt
.github/workflows/: doc_builder.yml  website.yml
docs/automation/configure/: index.html
docs/automation/configure.py/: index.html
docs/automation/dockerfile/: index.html
docs/automation/generate.py/: index.html
docs/automation/invoke/: index.html
docs/automation/overview/: index.html
docs/automation/poetry/: index.html
docs/automation/rollback.py/: index.html
docs/automation/tools/: index.html
docs/automation/validate/: index.html
docs/automation/validate.py/: index.html
docs/juniper-vlabs/: index.html
docs/lab-environment/juniper-vlabs/: index.html
docs/lab-environment/local/: index.html
docs/locally/: index.html
docs/overview/: index.html
files/docker/: Dockerfile  requirements.txt
files/jti/: config.json  kafka.json
files/junos/: amarillo.conf  austin.conf  dallas.conf  elpaso.conf  fortworth.conf  galveston.conf  houston.conf  junos.conf  sanantonio.conf
files/python/: __init__.py  bootstrap.py  build.py  configure.py  download.py  generate.py  inventory.py  template_bootstrap.py  template_config.py  test_jinja.py  validate.py
files/shell/: download.sh  upload.sh
search/: search_index.json
site/content/: index.en.md  index.ja.md  index.md
(+153 files in other folders)
