[tool.poetry]
name = "juniper-mpls-l3vpn-demo"
version = "0.1.0"
description = "Python packages to automate the deployment of a L3VPN circuit"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
junos-eznc = "^2.6.3"
jsnapy = "^1.3.6"
scrapli-netconf = "^2021.7.30"
scrapli = "^2021.7.30"
nornir = "^3.2.0"
nornir-pyez = "^0.0.10"
Jinja2 = "^3.0.3"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
